@@ -1,6 +1,6 @@
 ## Makefile.am for the TeX Live subdirectory texk/texlive/
 ##
-## Copyright (C) 2009, 2010 Peter Breitenlohner <tex-live@tug.org>
+## Copyright (C) 2009-2012 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 ##
 ACLOCAL_AMFLAGS = -I ../../m4
@@ -10,3 +10,8 @@ SUBDIRS = context linked_scripts
 ## Windows wrapper
 ##
 EXTRA_DIST = w32_wrapper
+
+## Tests
+##
+TESTS = tests/updmap-cmdline-test.pl
+EXTRA_DIST += $(TESTS)
