@@ -1,3 +1,8 @@
+2012-04-14  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* tests/ (new): Moved from ../texlive/ to here and adapted.
+	* Makefile.am: Adapted.
+
 2011-09-10  Reinhard Kotucha  <reinhard.kotucha@web.de>
 
 	* w32_wrapper/runscript.tlu: added -dDisableFAPI=true to psview
